fix(webui): fix spacing for code

--- a/webui/src/index.css
+++ b/webui/src/index.css
@@ -4,7 +4,7 @@ body {
 
 code {
   background-color: #2f2f2f;
-	padding: 1px 0.4em 1px 0.4em;
+	padding: 1px 0.5em 1px 0.5em;
   border-radius: 4px;
 	font-size: 95%;
 	margin: 2px;
